[project]
name = "aitravelagent"
version = "0.1.0"
description = ""
authors = [
    {name = "Norbert Lupamo",email = "91078038+lupamo3@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "langchain (>=1.0.8,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-groq (>=1.0.1,<2.0.0)",
    "chromadb (>=1.3.5,<2.0.0)",
    "streamlit (>=1.51.0,<2.0.0)",
    "pandas (<3)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "langchain-huggingface (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
